@@ -2,6 +2,11 @@ package io.euhedral_execution.training;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 import io.euhedral_execution.training.benchmark.config.BenchmarkExecutionConfig;
 import io.euhedral_execution.training.benchmark.data.NativeBenchmarkRunPlan;
@@ -20,14 +25,11 @@ import io.euhedral_execution.training.data.enums.ObservationStatus;
 import io.euhedral_execution.training.data.io.CanonicalCsv;
 import io.euhedral_execution.training.data.io.ObservationBundleWriter;
 import io.euhedral_execution.training.learning.InsufficientScenarioLearningDataException;
-import io.euhedral_execution.training.learning.ScenarioConditionedModel;
 import io.euhedral_execution.training.learning.config.ScenarioTrainingConfig;
 import io.euhedral_execution.training.learning.inputs.ScenarioTrainingRequest;
-import io.euhedral_execution.training.learning.output.ScenarioTrainingArtifacts;
 import io.euhedral_execution.training.merge.config.AggregationConfig;
 import io.euhedral_execution.training.merge.config.AnchorSelectionConfig;
 import io.euhedral_execution.training.merge.config.CalibrationConfig;
-import io.euhedral_execution.training.merge.data.CalibrationPlan;
 import io.euhedral_execution.training.optimization.config.CandidateGenerationConfig;
 import io.euhedral_execution.training.optimization.config.CmaEsConfig;
 import io.euhedral_execution.training.packaging.TrainingRunPackageValidator;
@@ -50,6 +52,7 @@ import java.util.TreeSet;
 import java.util.concurrent.atomic.AtomicBoolean;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
+import org.mockito.ArgumentCaptor;
 
 class ClosedLoopRunnerTest {
     @TempDir
@@ -63,21 +66,21 @@ class ClosedLoopRunnerTest {
         var a = SourceScenario.of("env-a", 1, 4);
         var b = SourceScenario.of("env-b", 1, 4);
         TreeSet<SourceScenario> required = new TreeSet<>(List.of(a, b));
-        FakeServices firstServices = new FakeServices(false);
+        ClosedLoopServices firstServices = createMockServices(false);
         ClosedLoopResult first = ClosedLoopRunner.run(config(bootstrap, required,
                 "env-a", false), firstServices);
         assertThat(first.stage()).isEqualTo(
                 io.euhedral_execution.training.checkpoint.enums.CheckpointStage.BOOTSTRAP_PENDING);
         assertThat(first.awaitingScenarios()).containsExactly(b);
 
-        FakeServices secondServices = new FakeServices(true);
+        ClosedLoopServices secondServices = createMockServices(true);
         ClosedLoopResult second = ClosedLoopRunner.run(config(bootstrap, required,
                 "env-b", true), secondServices);
         assertThat(second.stage()).isEqualTo(
                 io.euhedral_execution.training.checkpoint.enums.CheckpointStage.READY_TO_TRAIN);
         assertThat(second.latestMerge()).isPresent();
         assertThat(second.awaitingScenarios()).isEmpty();
-        assertThat(secondServices.mergeCalled).isTrue();
+        verify(secondServices).merge(any());
         assertThat(second.packageDirectory()).isEmpty();
 
         int revision = Integer.parseInt(second.latestCheckpoint().getFileName().toString()
@@ -128,7 +131,7 @@ class ClosedLoopRunnerTest {
         TreeSet<SourceScenario> required = new TreeSet<>(List.of(scenario));
 
         ClosedLoopRunner.run(config(null, required, "env-a", false),
-                new BootstrapOnlyServices());
+                createBootstrapOnlyMockServices());
 
         Path persisted = temp.resolve(
                 "workspace/bootstrap/bootstrap-policies.vectors.csv");
@@ -146,16 +149,19 @@ class ClosedLoopRunnerTest {
         TreeSet<SourceScenario> required = new TreeSet<>(List.of(scenario));
 
         ClosedLoopRunner.run(config(bootstrap, required, "env-a", false),
-                new BootstrapOnlyServices());
+                createBootstrapOnlyMockServices());
 
-        FallbackTrainingServices services = new FallbackTrainingServices();
+        ClosedLoopServices services = createFallbackTrainingMockServices();
         ClosedLoopResult result = ClosedLoopRunner.run(config(bootstrap, required,
                 "env-a", true, 1), services);
 
         assertThat(result.stage()).isEqualTo(CheckpointStage.MODEL_REJECTED);
-        assertThat(services.seenConfigs).hasSize(1);
-        assertThat(services.seenConfigs.getFirst().requireTargetVariation()).isFalse();
-        assertThat(services.seenConfigs.getFirst().minimumValidationPolicyGroups()).isEqualTo(1);
+        ArgumentCaptor<ScenarioTrainingRequest> captor = ArgumentCaptor.forClass(
+                ScenarioTrainingRequest.class);
+        verify(services).train(captor.capture());
+        ScenarioTrainingConfig capturedConfig = captor.getValue().config();
+        assertThat(capturedConfig.requireTargetVariation()).isFalse();
+        assertThat(capturedConfig.minimumValidationPolicyGroups()).isEqualTo(1);
     }
 
     @Test
@@ -166,27 +172,31 @@ class ClosedLoopRunnerTest {
         TreeSet<SourceScenario> required = new TreeSet<>(List.of(scenario));
 
         ClosedLoopRunner.run(config(bootstrap, required, "env-a", false, 2),
-                new BootstrapOnlyServices());
+                createBootstrapOnlyMockServices());
 
-        RejectingTrainingServices firstPass = new RejectingTrainingServices(true);
+        ClosedLoopServices firstPass = createRejectingTrainingMockServices(true, false, false);
         ClosedLoopResult readyForSecondIteration = ClosedLoopRunner.run(
                 config(bootstrap, required, "env-a", true, 2), firstPass);
 
         assertThat(readyForSecondIteration.stage()).isEqualTo(CheckpointStage.READY_TO_TRAIN);
-        assertThat(firstPass.seenConfigs).hasSize(1);
-        assertThat(firstPass.seenConfigs.getFirst().requireTargetVariation()).isFalse();
-        assertThat(firstPass.seenConfigs.getFirst().minimumValidationPolicyGroups())
-                .isEqualTo(1);
+        ArgumentCaptor<ScenarioTrainingRequest> firstCaptor = ArgumentCaptor.forClass(
+                ScenarioTrainingRequest.class);
+        verify(firstPass).train(firstCaptor.capture());
+        ScenarioTrainingConfig firstConfig = firstCaptor.getValue().config();
+        assertThat(firstConfig.requireTargetVariation()).isFalse();
+        assertThat(firstConfig.minimumValidationPolicyGroups()).isEqualTo(1);
 
-        RejectingTrainingServices secondPass = new RejectingTrainingServices(false);
+        ClosedLoopServices secondPass = createRejectingTrainingMockServices(false, false, false);
         ClosedLoopResult terminal = ClosedLoopRunner.run(
                 config(bootstrap, required, "env-a", true, 2), secondPass);
 
         assertThat(terminal.stage()).isEqualTo(CheckpointStage.MODEL_REJECTED);
-        assertThat(secondPass.seenConfigs).hasSize(1);
-        assertThat(secondPass.seenConfigs.getFirst().requireTargetVariation()).isTrue();
-        assertThat(secondPass.seenConfigs.getFirst().minimumValidationPolicyGroups())
-                .isEqualTo(10);
+        ArgumentCaptor<ScenarioTrainingRequest> secondCaptor = ArgumentCaptor.forClass(
+                ScenarioTrainingRequest.class);
+        verify(secondPass).train(secondCaptor.capture());
+        ScenarioTrainingConfig secondConfig = secondCaptor.getValue().config();
+        assertThat(secondConfig.requireTargetVariation()).isTrue();
+        assertThat(secondConfig.minimumValidationPolicyGroups()).isEqualTo(10);
     }
 
     @Test
@@ -198,7 +208,7 @@ class ClosedLoopRunnerTest {
         TreeSet<SourceScenario> required = new TreeSet<>(List.of(scenario));
 
         ClosedLoopRunner.run(config(bootstrap, required, "env-a", false, 2),
-                new BootstrapOnlyServices());
+                createBootstrapOnlyMockServices());
         Path sourceWorkspace = temp.resolve("workspace");
         List<Path> evidence;
         try (var paths = Files.list(sourceWorkspace.resolve("evidence"))) {
@@ -209,20 +219,21 @@ class ClosedLoopRunnerTest {
                 sourceWorkspace.resolve("calibration-plan"), evidence, required, false, 2);
 
         ClosedLoopResult initialized = ClosedLoopRunner.run(imported,
-                new FakeServices(true));
+                createMockServices(true));
         assertThat(initialized.stage()).isEqualTo(CheckpointStage.READY_TO_TRAIN);
 
-        RejectingTrainingServices services = new RejectingTrainingServices(true,
-                false, true);
+        ClosedLoopServices services = createRejectingTrainingMockServices(true, false, true);
         ClosedLoopResult result = ClosedLoopRunner.run(initialCalibrationConfig(
                 importedWorkspace, sourceWorkspace.resolve("calibration-plan"), evidence,
                 required, true, 2), services);
 
         assertThat(result.stage()).isEqualTo(CheckpointStage.READY_TO_TRAIN);
-        assertThat(services.seenConfigs).singleElement().satisfies(training -> {
-            assertThat(training.requireTargetVariation()).isFalse();
-            assertThat(training.minimumValidationPolicyGroups()).isEqualTo(1);
-        });
+        ArgumentCaptor<ScenarioTrainingRequest> captor = ArgumentCaptor.forClass(
+                ScenarioTrainingRequest.class);
+        verify(services).train(captor.capture());
+        ScenarioTrainingConfig capturedConfig = captor.getValue().config();
+        assertThat(capturedConfig.requireTargetVariation()).isFalse();
+        assertThat(capturedConfig.minimumValidationPolicyGroups()).isEqualTo(1);
     }
 
     @Test
@@ -233,17 +244,19 @@ class ClosedLoopRunnerTest {
         TreeSet<SourceScenario> required = new TreeSet<>(List.of(scenario));
 
         ClosedLoopRunner.run(config(bootstrap, required, "env-a", false, 1),
-                new BootstrapOnlyServices());
+                createBootstrapOnlyMockServices());
 
-        RejectingTrainingServices services = new RejectingTrainingServices(false);
+        ClosedLoopServices services = createRejectingTrainingMockServices(false, false, false);
         ClosedLoopResult result = ClosedLoopRunner.run(
                 config(bootstrap, required, "env-a", true, 1), services);
 
         assertThat(result.stage()).isEqualTo(CheckpointStage.RUN_COMPLETE);
-        assertThat(services.seenConfigs).singleElement().satisfies(training -> {
-            assertThat(training.requireTargetVariation()).isFalse();
-            assertThat(training.minimumValidationPolicyGroups()).isEqualTo(1);
-        });
+        ArgumentCaptor<ScenarioTrainingRequest> captor = ArgumentCaptor.forClass(
+                ScenarioTrainingRequest.class);
+        verify(services).train(captor.capture());
+        ScenarioTrainingConfig capturedConfig = captor.getValue().config();
+        assertThat(capturedConfig.requireTargetVariation()).isFalse();
+        assertThat(capturedConfig.minimumValidationPolicyGroups()).isEqualTo(1);
     }
 
     @Test
@@ -255,21 +268,25 @@ class ClosedLoopRunnerTest {
         TreeSet<SourceScenario> required = new TreeSet<>(List.of(scenario));
 
         ClosedLoopRunner.run(config(bootstrap, required, "env-a", false, 2),
-                new BootstrapOnlyServices());
+                createBootstrapOnlyMockServices());
         ClosedLoopResult readyForSecondIteration = ClosedLoopRunner.run(
                 config(bootstrap, required, "env-a", true, 2),
-                new RejectingTrainingServices(true));
+                createRejectingTrainingMockServices(true, false, false));
         assertThat(readyForSecondIteration.stage()).isEqualTo(CheckpointStage.READY_TO_TRAIN);
 
-        RejectingTrainingServices sparseSecondIteration =
-                new RejectingTrainingServices(false, true);
+        ClosedLoopServices sparseSecondIteration =
+                createRejectingTrainingMockServices(false, true, false);
         ClosedLoopResult completed = ClosedLoopRunner.run(
                 config(bootstrap, required, "env-a", true, 2), sparseSecondIteration);
 
         assertThat(completed.stage()).isEqualTo(CheckpointStage.RUN_COMPLETE);
-        assertThat(sparseSecondIteration.seenConfigs).hasSize(2);
-        assertThat(sparseSecondIteration.seenConfigs.getFirst().requireTargetVariation()).isTrue();
-        assertThat(sparseSecondIteration.seenConfigs.getLast().requireTargetVariation()).isFalse();
+        ArgumentCaptor<ScenarioTrainingRequest> captor = ArgumentCaptor.forClass(
+                ScenarioTrainingRequest.class);
+        verify(sparseSecondIteration, times(2)).train(captor.capture());
+        List<ScenarioTrainingRequest> capturedRequests = captor.getAllValues();
+        assertThat(capturedRequests).hasSize(2);
+        assertThat(capturedRequests.get(0).config().requireTargetVariation()).isTrue();
+        assertThat(capturedRequests.get(1).config().requireTargetVariation()).isFalse();
     }
 
     private ClosedLoopConfig config(Path bootstrap, TreeSet<SourceScenario> scenarios,
@@ -327,264 +344,90 @@ class ClosedLoopRunnerTest {
         Files.writeString(file, output, StandardCharsets.UTF_8);
     }
 
-    private static final class FakeServices implements ClosedLoopServices {
-        private final AtomicBoolean stopAfterMerge;
-        boolean mergeCalled;
+    private ClosedLoopServices createMockServices(boolean stopAfterMerge) throws Exception {
+        ClosedLoopServices services = mock(ClosedLoopServices.class);
+        AtomicBoolean mergeCalled = new AtomicBoolean(false);
 
-        private FakeServices(boolean stopAfterMerge) {
-            this.stopAfterMerge = new AtomicBoolean(stopAfterMerge);
-        }
+        when(services.bootstrapCalibration(any())).thenAnswer(
+                inv -> DataMerger.bootstrapCalibrationV1(inv.getArgument(0)));
+        when(services.merge(any())).thenAnswer(inv -> {
+            mergeCalled.set(true);
+            return DataMerger.mergeV1(inv.getArgument(0));
+        });
+        when(services.train(any())).thenThrow(
+                new AssertionError("Training must not start after requested stop"));
+        when(services.loadAcceptedModel(any(), any())).thenThrow(new AssertionError());
+        when(services.benchmark(any(), any())).thenAnswer(inv -> createBenchmarkContext(
+                inv.getArgument(0)));
+        when(services.stopRequested()).thenAnswer(
+                inv -> mergeCalled.get() && stopAfterMerge);
+        when(services.activeCoreCount()).thenReturn(4);
+        when(services.activeCpuSetHex()).thenReturn("f");
 
-        @Override
-        public CalibrationPlan bootstrapCalibration(
-                DataMerger.CalibrationBootstrapRequest request) throws Exception {
-            return DataMerger.bootstrapCalibrationV1(request);
-        }
-
-        @Override
-        public DataMerger.MergeArtifacts merge(DataMerger.MergeRequest request)
-                throws Exception {
-            DataMerger.MergeArtifacts result = DataMerger.mergeV1(request);
-            mergeCalled = true;
-            return result;
-        }
-
-        @Override
-        public ScenarioTrainingArtifacts train(ScenarioTrainingRequest request) {
-            throw new AssertionError("Training must not start after requested stop");
-        }
-
-        @Override
-        public ScenarioConditionedModel loadAcceptedModel(Path modelDirectory,
-                String producingDevice) {
-            throw new AssertionError();
-        }
-
-        @Override
-        public BenchmarkRunContext benchmark(NativeBenchmarkRunPlan plan,
-                java.util.function.BooleanSupplier stopRequested) {
-            Instant start = Instant.EPOCH;
-            BenchmarkRunDescriptor descriptor = new BenchmarkRunDescriptor(1,
-                    plan.benchmarkRunId(), plan.iteration(), plan.candidateCohortId(),
-                    plan.scenario(), plan.commitSha(), plan.dirtyWorkingTree(),
-                    EvidenceOrigin.NATIVE, start, plan.parameters());
-            try (ObservationBundleWriter writer = ObservationBundleWriter.open(
-                    plan.outputBundle(), descriptor)) {
-                plan.policies().forEach(writer::registerPolicy);
-                long offset = 0;
-                for (var policy : plan.policies()) {
-                    for (int repetition = 1;
-                            repetition <= plan.executionConfig().expectedRepetitions();
-                            repetition++) {
-                        Instant observationStart = start.plusNanos(offset);
-                        long elapsed = 100;
-                        long frames = 100;
-                        writer.write(new BenchmarkObservation(new ObservationKey(
-                                plan.benchmarkRunId(), plan.scenario(), policy.policy().id(),
-                                repetition), descriptor, policy, ObservationStatus.SUCCESS,
-                                MeasurementEncoding.COUNTER_DERIVED, observationStart,
-                                observationStart.plusNanos(elapsed), OptionalLong.of(elapsed),
-                                OptionalLong.of(frames), OptionalDouble.of(
-                                frames * 1_000_000_000.0 / elapsed), ""));
-                        offset += elapsed;
-                    }
-                }
-                return writer.complete(start.plusNanos(offset));
-            }
-        }
-
-        @Override
-        public boolean stopRequested() {
-            return mergeCalled && stopAfterMerge.get();
-        }
-
-        @Override
-        public int activeCoreCount() {
-            return 4;
-        }
-
-        @Override
-        public String activeCpuSetHex() {
-            return "f";
-        }
+        return services;
     }
 
-    private static final class BootstrapOnlyServices implements ClosedLoopServices {
-        private boolean mergeCalled;
+    private ClosedLoopServices createBootstrapOnlyMockServices() throws Exception {
+        ClosedLoopServices services = mock(ClosedLoopServices.class);
+        AtomicBoolean mergeCalled = new AtomicBoolean(false);
 
-        @Override
-        public CalibrationPlan bootstrapCalibration(
-                DataMerger.CalibrationBootstrapRequest request) throws Exception {
-            return DataMerger.bootstrapCalibrationV1(request);
-        }
+        when(services.bootstrapCalibration(any())).thenAnswer(
+                inv -> DataMerger.bootstrapCalibrationV1(inv.getArgument(0)));
+        when(services.merge(any())).thenAnswer(inv -> {
+            mergeCalled.set(true);
+            return DataMerger.mergeV1(inv.getArgument(0));
+        });
+        when(services.train(any())).thenThrow(
+                new AssertionError("Training should not run during bootstrap-only pass"));
+        when(services.loadAcceptedModel(any(), any())).thenThrow(new AssertionError());
+        when(services.benchmark(any(), any())).thenAnswer(inv -> createBenchmarkContext(
+                inv.getArgument(0)));
+        when(services.stopRequested()).thenAnswer(inv -> mergeCalled.get());
+        when(services.activeCoreCount()).thenReturn(4);
+        when(services.activeCpuSetHex()).thenReturn("f");
 
-        @Override
-        public DataMerger.MergeArtifacts merge(DataMerger.MergeRequest request)
-                throws Exception {
-            DataMerger.MergeArtifacts result = DataMerger.mergeV1(request);
-            mergeCalled = true;
-            return result;
-        }
-
-        @Override
-        public ScenarioTrainingArtifacts train(ScenarioTrainingRequest request) {
-            throw new AssertionError("Training should not run during bootstrap-only pass");
-        }
-
-        @Override
-        public ScenarioConditionedModel loadAcceptedModel(Path modelDirectory,
-                String producingDevice) {
-            throw new AssertionError();
-        }
-
-        @Override
-        public BenchmarkRunContext benchmark(NativeBenchmarkRunPlan plan,
-                java.util.function.BooleanSupplier stopRequested) {
-            Instant start = Instant.EPOCH;
-            BenchmarkRunDescriptor descriptor = new BenchmarkRunDescriptor(1,
-                    plan.benchmarkRunId(), plan.iteration(), plan.candidateCohortId(),
-                    plan.scenario(), plan.commitSha(), plan.dirtyWorkingTree(),
-                    EvidenceOrigin.NATIVE, start, plan.parameters());
-            try (ObservationBundleWriter writer = ObservationBundleWriter.open(
-                    plan.outputBundle(), descriptor)) {
-                plan.policies().forEach(writer::registerPolicy);
-                long offset = 0;
-                for (var policy : plan.policies()) {
-                    for (int repetition = 1;
-                            repetition <= plan.executionConfig().expectedRepetitions();
-                            repetition++) {
-                        Instant observationStart = start.plusNanos(offset);
-                        long elapsed = 100;
-                        long frames = 100;
-                        writer.write(new BenchmarkObservation(new ObservationKey(
-                                plan.benchmarkRunId(), plan.scenario(), policy.policy().id(),
-                                repetition), descriptor, policy, ObservationStatus.SUCCESS,
-                                MeasurementEncoding.COUNTER_DERIVED, observationStart,
-                                observationStart.plusNanos(elapsed), OptionalLong.of(elapsed),
-                                OptionalLong.of(frames), OptionalDouble.of(
-                                frames * 1_000_000_000.0 / elapsed), ""));
-                        offset += elapsed;
-                    }
-                }
-                return writer.complete(start.plusNanos(offset));
-            }
-        }
-
-        @Override
-        public boolean stopRequested() {
-            return mergeCalled;
-        }
-
-        @Override
-        public int activeCoreCount() {
-            return 4;
-        }
-
-        @Override
-        public String activeCpuSetHex() {
-            return "f";
-        }
+        return services;
     }
 
-    private static final class FallbackTrainingServices implements ClosedLoopServices {
-        private final ArrayList<ScenarioTrainingConfig> seenConfigs = new ArrayList<>();
-        private boolean trained;
+    private ClosedLoopServices createFallbackTrainingMockServices() throws Exception {
+        ClosedLoopServices services = mock(ClosedLoopServices.class);
+        AtomicBoolean trained = new AtomicBoolean(false);
 
-        @Override
-        public CalibrationPlan bootstrapCalibration(
-                DataMerger.CalibrationBootstrapRequest request) {
-            throw new AssertionError();
-        }
-
-        @Override
-        public DataMerger.MergeArtifacts merge(DataMerger.MergeRequest request) {
-            throw new AssertionError();
-        }
-
-        @Override
-        public ScenarioTrainingArtifacts train(ScenarioTrainingRequest request)
-                throws Exception {
-            seenConfigs.add(request.config());
+        when(services.bootstrapCalibration(any())).thenThrow(new AssertionError());
+        when(services.merge(any())).thenThrow(new AssertionError());
+        when(services.train(any())).thenAnswer(inv -> {
+            ScenarioTrainingRequest request = inv.getArgument(0);
             if (request.config().requireTargetVariation()) {
                 throw new InsufficientScenarioLearningDataException(
                         "validation has too few policy groups");
             }
-            trained = true;
+            trained.set(true);
             return io.euhedral_execution.training.learning.AuditScenarioModelFixture.writeRejected(
                     request.modelDirectory(), request.requiredScenarios(), request.config(),
                     SchedulingFixtures.policy(999), request.commitSha(),
                     request.dirtyWorkingTree());
-        }
+        });
+        when(services.loadAcceptedModel(any(), any())).thenThrow(new AssertionError());
+        when(services.benchmark(any(), any())).thenThrow(new AssertionError());
+        when(services.stopRequested()).thenAnswer(inv -> trained.get());
+        when(services.activeCoreCount()).thenReturn(4);
+        when(services.activeCpuSetHex()).thenReturn("f");
 
-        @Override
-        public ScenarioConditionedModel loadAcceptedModel(Path modelDirectory,
-                String producingDevice) {
-            throw new AssertionError();
-        }
-
-        @Override
-        public BenchmarkRunContext benchmark(NativeBenchmarkRunPlan plan,
-                java.util.function.BooleanSupplier stopRequested) {
-            throw new AssertionError();
-        }
-
-        @Override
-        public boolean stopRequested() {
-            return trained;
-        }
-
-        @Override
-        public int activeCoreCount() {
-            return 4;
-        }
-
-        @Override
-        public String activeCpuSetHex() {
-            return "f";
-        }
+        return services;
     }
 
-    private static final class RejectingTrainingServices implements ClosedLoopServices {
-        private final boolean stopAfterFirstMerge;
-        private final boolean failStrictTraining;
-        private final boolean storeStrictMetadata;
-        private final ArrayList<ScenarioTrainingConfig> seenConfigs = new ArrayList<>();
-        private boolean mergeCalled;
+    private ClosedLoopServices createRejectingTrainingMockServices(boolean stopAfterFirstMerge,
+            boolean failStrictTraining, boolean storeStrictMetadata) throws Exception {
+        ClosedLoopServices services = mock(ClosedLoopServices.class);
+        AtomicBoolean mergeCalled = new AtomicBoolean(false);
 
-        private RejectingTrainingServices(boolean stopAfterFirstMerge) {
-            this(stopAfterFirstMerge, false, false);
-        }
-
-        private RejectingTrainingServices(boolean stopAfterFirstMerge,
-                boolean failStrictTraining) {
-            this(stopAfterFirstMerge, failStrictTraining, false);
-        }
-
-        private RejectingTrainingServices(boolean stopAfterFirstMerge,
-                boolean failStrictTraining, boolean storeStrictMetadata) {
-            this.stopAfterFirstMerge = stopAfterFirstMerge;
-            this.failStrictTraining = failStrictTraining;
-            this.storeStrictMetadata = storeStrictMetadata;
-        }
-
-        @Override
-        public CalibrationPlan bootstrapCalibration(
-                DataMerger.CalibrationBootstrapRequest request) {
-            throw new AssertionError();
-        }
-
-        @Override
-        public DataMerger.MergeArtifacts merge(DataMerger.MergeRequest request)
-                throws Exception {
-            DataMerger.MergeArtifacts result = DataMerger.mergeV1(request);
-            mergeCalled = true;
-            return result;
-        }
-
-        @Override
-        public ScenarioTrainingArtifacts train(ScenarioTrainingRequest request)
-                throws Exception {
-            seenConfigs.add(request.config());
+        when(services.bootstrapCalibration(any())).thenThrow(new AssertionError());
+        when(services.merge(any())).thenAnswer(inv -> {
+            mergeCalled.set(true);
+            return DataMerger.mergeV1(inv.getArgument(0));
+        });
+        when(services.train(any())).thenAnswer(inv -> {
+            ScenarioTrainingRequest request = inv.getArgument(0);
             if (failStrictTraining && request.config().requireTargetVariation()) {
                 throw new InsufficientScenarioLearningDataException(
                         "train lacks rows for a required scenario");
@@ -595,60 +438,47 @@ class ClosedLoopRunnerTest {
                     request.modelDirectory(), request.requiredScenarios(), storedConfig,
                     SchedulingFixtures.policy(999), request.commitSha(),
                     request.dirtyWorkingTree());
-        }
+        });
+        when(services.loadAcceptedModel(any(), any())).thenThrow(
+                new AssertionError("Rejected models should use the neutral predictor"));
+        when(services.benchmark(any(), any())).thenAnswer(inv -> createBenchmarkContext(
+                inv.getArgument(0)));
+        when(services.stopRequested()).thenAnswer(
+                inv -> mergeCalled.get() && stopAfterFirstMerge);
+        when(services.activeCoreCount()).thenReturn(4);
+        when(services.activeCpuSetHex()).thenReturn("f");
 
-        @Override
-        public ScenarioConditionedModel loadAcceptedModel(Path modelDirectory,
-                String producingDevice) {
-            throw new AssertionError("Rejected models should use the neutral predictor");
-        }
+        return services;
+    }
 
-        @Override
-        public BenchmarkRunContext benchmark(NativeBenchmarkRunPlan plan,
-                java.util.function.BooleanSupplier stopRequested) {
-            Instant start = Instant.EPOCH;
-            BenchmarkRunDescriptor descriptor = new BenchmarkRunDescriptor(1,
-                    plan.benchmarkRunId(), plan.iteration(), plan.candidateCohortId(),
-                    plan.scenario(), plan.commitSha(), plan.dirtyWorkingTree(),
-                    EvidenceOrigin.NATIVE, start, plan.parameters());
-            try (ObservationBundleWriter writer = ObservationBundleWriter.open(
-                    plan.outputBundle(), descriptor)) {
-                plan.policies().forEach(writer::registerPolicy);
-                long offset = 0;
-                for (var policy : plan.policies()) {
-                    for (int repetition = 1;
-                            repetition <= plan.executionConfig().expectedRepetitions();
-                            repetition++) {
-                        Instant observationStart = start.plusNanos(offset);
-                        long elapsed = 100;
-                        long frames = 100;
-                        writer.write(new BenchmarkObservation(new ObservationKey(
-                                plan.benchmarkRunId(), plan.scenario(), policy.policy().id(),
-                                repetition), descriptor, policy, ObservationStatus.SUCCESS,
-                                MeasurementEncoding.COUNTER_DERIVED, observationStart,
-                                observationStart.plusNanos(elapsed), OptionalLong.of(elapsed),
-                                OptionalLong.of(frames), OptionalDouble.of(
-                                frames * 1_000_000_000.0 / elapsed), ""));
-                        offset += elapsed;
-                    }
+    private BenchmarkRunContext createBenchmarkContext(NativeBenchmarkRunPlan plan) {
+        Instant start = Instant.EPOCH;
+        BenchmarkRunDescriptor descriptor = new BenchmarkRunDescriptor(1,
+                plan.benchmarkRunId(), plan.iteration(), plan.candidateCohortId(),
+                plan.scenario(), plan.commitSha(), plan.dirtyWorkingTree(),
+                EvidenceOrigin.NATIVE, start, plan.parameters());
+        try (ObservationBundleWriter writer = ObservationBundleWriter.open(
+                plan.outputBundle(), descriptor)) {
+            plan.policies().forEach(writer::registerPolicy);
+            long offset = 0;
+            for (var policy : plan.policies()) {
+                for (int repetition = 1;
+                        repetition <= plan.executionConfig().expectedRepetitions();
+                        repetition++) {
+                    Instant observationStart = start.plusNanos(offset);
+                    long elapsed = 100;
+                    long frames = 100;
+                    writer.write(new BenchmarkObservation(new ObservationKey(
+                            plan.benchmarkRunId(), plan.scenario(), policy.policy().id(),
+                            repetition), descriptor, policy, ObservationStatus.SUCCESS,
+                            MeasurementEncoding.COUNTER_DERIVED, observationStart,
+                            observationStart.plusNanos(elapsed), OptionalLong.of(elapsed),
+                            OptionalLong.of(frames), OptionalDouble.of(
+                            frames * 1_000_000_000.0 / elapsed), ""));
+                    offset += elapsed;
                 }
-                return writer.complete(start.plusNanos(offset));
             }
-        }
-
-        @Override
-        public boolean stopRequested() {
-            return mergeCalled && stopAfterFirstMerge;
-        }
-
-        @Override
-        public int activeCoreCount() {
-            return 4;
-        }
-
-        @Override
-        public String activeCpuSetHex() {
-            return "f";
+            return writer.complete(start.plusNanos(offset));
         }
     }
 
